vcs/specs/parser/fail/expressions/unclosed_paren_expr.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, parens, unclosed, error
// @description: Unclosed parenthesis in expression
// @expected-error: E018

fn test() {
    let x = (1 + 2;
}
